--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
 		"@ng-bootstrap/schematics": "^2.0.0-alpha.1",
 		"@ngx-translate/core": "^12.1.2",
 		"@ngx-translate/http-loader": "^4.0.0",
+		"@witty-services/rxjs-common": "^1.0.5",
 		"bootstrap": "^4.4.1",
 		"firebase": "^7.12.0",
+		"font-awesome": "^4.7.0",
 		"jquery": "^3.4.1",
 		"rxjs": "~6.5.4",
 		"tslib": "^1.10.0",
