feat(17): setup realtime database

--- a/angular.json
+++ b/angular.json
@@ -133,5 +133,8 @@
 		"@schematics/angular:component": {
 			"styleext": "scss"
 		}
+	},
+	"cli": {
+		"analytics": "168626c7-6f80-407a-87fc-52e2fab98b5b"
 	}
 }
